[gd_scene load_steps=5 format=3 uid="uid://dj1002rdgnyr0"]

[ext_resource type="Texture2D" uid="uid://bcvp1sws6irqq" path="res://assests/brackeys_platformer_assets/sprites/platforms.png" id="1_u4ech"]
[ext_resource type="Script" uid="uid://dapxng6qu6jef" path="res://scenes/falling_platform.gd" id="1_xxnm7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m8vnt"]
size = Vector2(32, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bojjt"]
size = Vector2(30.0615, 10.9485)

[node name="Falling_down" type="CharacterBody2D"]
script = ExtResource("1_xxnm7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_u4ech")
region_enabled = true
region_rect = Rect2(16, 0, 32, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_m8vnt")

[node name="player_enter" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_enter"]
position = Vector2(0, -1)
scale = Vector2(1.06448, 0.913365)
shape = SubResource("RectangleShape2D_bojjt")

[node name="TimerDropPlatform" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="player_enter" to="." method="_on_player_enter_body_entered"]
[connection signal="timeout" from="TimerDropPlatform" to="." method="_on_timer_drop_platform_timeout"]
